--- a/LibrarySystem/LibrarySystem/NotificationDialogs/Presentation/SuccessDialog.xaml
+++ b/LibrarySystem/LibrarySystem/NotificationDialogs/Presentation/SuccessDialog.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="ZdravoCorp.MainUI.NotificationDialogs.Presentation.SuccessDialog"
+﻿<Window x:Class="LibrarySystem.NotificationDialogs.Presentation.SuccessDialog"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
