--- a/LibrarySystem/LibrarySystem/MainUI/LibrarianWindow.xaml
+++ b/LibrarySystem/LibrarySystem/MainUI/LibrarianWindow.xaml
@@ -11,13 +11,13 @@
         <Label Content="Choose member" HorizontalAlignment="Left" Margin="23,31,0,0" VerticalAlignment="Top" FontSize="14" FontWeight="Bold"/>
         <DataGrid x:Name="titleTable" SelectionChanged="Titles_OnSelectionChanged" ItemsSource="{Binding Titles, UpdateSourceTrigger=PropertyChanged}" CanUserAddRows="False" IsReadOnly="True" ColumnWidth="*" HorizontalAlignment="Center" Height="140" Margin="0,109,0,0" VerticalAlignment="Top" Width="856" d:ItemsSource="{d:SampleData ItemCount=5}"/>
         <Label Content="Choose title" HorizontalAlignment="Left" Margin="23,75,0,0" VerticalAlignment="Top" FontSize="14" FontWeight="Bold"/>
-        <DataGrid x:Name="bookTable" ItemsSource="{Binding Books, UpdateSourceTrigger=PropertyChanged}" CanUserAddRows="False" IsReadOnly="True" ColumnWidth="*" HorizontalAlignment="Left" Height="162" Margin="23,308,0,0" VerticalAlignment="Top" Width="455" d:ItemsSource="{d:SampleData ItemCount=5}"/>
+        <DataGrid x:Name="bookTable" SelectionChanged="Books_OnSelectionChanged" ItemsSource="{Binding Books, UpdateSourceTrigger=PropertyChanged}" CanUserAddRows="False" IsReadOnly="True" ColumnWidth="*" HorizontalAlignment="Left" Height="162" Margin="23,308,0,0" VerticalAlignment="Top" Width="455" d:ItemsSource="{d:SampleData ItemCount=5}"/>
         <Label Content="Choose book" HorizontalAlignment="Left" Margin="23,274,0,0" VerticalAlignment="Top" FontSize="14" FontWeight="Bold"/>
-        <DataGrid x:Name="copiesTable" ItemsSource="{Binding Copies, UpdateSourceTrigger=PropertyChanged}" CanUserAddRows="False" IsReadOnly="True" ColumnWidth="*" HorizontalAlignment="Left" Height="163" Margin="508,307,0,0" VerticalAlignment="Top" Width="370" d:ItemsSource="{d:SampleData ItemCount=5}"/>
+        <DataGrid x:Name="copiesTable" SelectionChanged="Copies_OnSelectionChanged" ItemsSource="{Binding Copies, UpdateSourceTrigger=PropertyChanged}" CanUserAddRows="False" IsReadOnly="True" ColumnWidth="*" HorizontalAlignment="Left" Height="163" Margin="508,307,0,0" VerticalAlignment="Top" Width="370" d:ItemsSource="{d:SampleData ItemCount=5}"/>
         <Label Content="Choose copy" HorizontalAlignment="Left" Margin="508,278,0,0" VerticalAlignment="Top" FontSize="14" FontWeight="Bold"/>
-        <Button Content="Loan copy" HorizontalAlignment="Left" Height="35" Margin="23,543,0,0" VerticalAlignment="Top" Width="130" FontSize="14" FontWeight="Bold"/>
+        <Button Content="Loan copy" Command="{Binding LoanBookCommand}" HorizontalAlignment="Left" Height="35" Margin="23,543,0,0" VerticalAlignment="Top" Width="130" FontSize="14" FontWeight="Bold"/>
         <Button x:Name="loadBooks" Command="{Binding LoadBooksCommand}" Content="Load books" HorizontalAlignment="Left" Height="26" Margin="401,486,0,0" VerticalAlignment="Top" Width="77" FontWeight="Bold"/>
-        <Button x:Name="loadCopies" Content="Load copies" HorizontalAlignment="Left" Height="26" Margin="801,486,0,0" VerticalAlignment="Top" Width="77" FontWeight="Bold"/>
+        <Button x:Name="loadCopies" Command="{Binding LoadCopiesCommand}" Content="Load copies" HorizontalAlignment="Left" Height="26" Margin="801,486,0,0" VerticalAlignment="Top" Width="77" FontWeight="Bold"/>
 
     </Grid>
 </Window>
