--- a/LibrarySystem/LibrarySystem/Reservations/Views/CancelReservationView.xaml
+++ b/LibrarySystem/LibrarySystem/Reservations/Views/CancelReservationView.xaml
@@ -1,11 +1,11 @@
-﻿<Window x:Class="LibrarySystem.MainUI.MemberWindow"
+﻿<Window x:Class="LibrarySystem.MainUI.CancelReservationView"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:LibrarySystem.MainUI"
         mc:Ignorable="d"
-        Title="MemberWindow" Height="450" Width="800" WindowStartupLocation="CenterScreen">
+        Title="CancelReservationView" Height="450" Width="800" WindowStartupLocation="CenterScreen">
     <Grid>
         <Button x:Name="logOutBtn" Command="{Binding LogoutCommand}" Content="Log out" HorizontalAlignment="Left" Height="31" Margin="650,367,0,0" VerticalAlignment="Top" Width="108" FontSize="14" Background="#FFEA5454" Foreground="White" FontWeight="Bold" BorderBrush="#FFF96363" RenderTransformOrigin="0.515,0.523"/>
         <Label x:Name="loggedUsernameLabel_Copy" Content="{Binding LoggedUser}" HorizontalAlignment="Left" Margin="106,364,0,0" VerticalAlignment="Top" FontSize="14" Width="193" Height="34"/>
@@ -19,7 +19,7 @@
                 </TransformGroup>
             </Label.RenderTransform>
         </Label>
-        <Button x:Name="cancelReservationBtn" Command="{Binding CancelReservationCommand}" Content="Cancel Reservation" HorizontalAlignment="Center" Height="31" Margin="0,106,0,0" VerticalAlignment="Top" Width="215" FontSize="14" Background="#FFEA5454" Foreground="White" FontWeight="Bold" BorderBrush="#FFF96363" RenderTransformOrigin="0.515,0.523"/>
+        <Button x:Name="backBtn" Command="{Binding BackCommand}" Content="Back" HorizontalAlignment="Left" Height="31" Margin="650,26,0,0" VerticalAlignment="Top" Width="108" FontSize="14" Background="#FFEA5454" Foreground="White" FontWeight="Bold" BorderBrush="#FFF96363" RenderTransformOrigin="0.515,0.523"/>
 
     </Grid>
 </Window>
