--- a/LibrarySystem/LibrarySystem/MainUI/SpecializedLibrarianView/SpecializedLibrarianWindow.xaml
+++ b/LibrarySystem/LibrarySystem/MainUI/SpecializedLibrarianView/SpecializedLibrarianWindow.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="LibrarySystem.MainUI.SpecializedLibrarianWindow"
+﻿<Window x:Class="LibrarySystem.MainUI.SpecializedLibrarianView.SpecializedLibrarianWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -26,7 +26,7 @@
         <Label x:Name="loggedUsernameLabel" Content="USERNAME" HorizontalAlignment="Left" Margin="90,0,0,5" VerticalAlignment="Bottom" FontSize="14"/>
         <Label x:Name="loggedLabel" Content="Logged in:" HorizontalAlignment="Left" Margin="10,0,0,5" VerticalAlignment="Bottom" FontSize="14"/>
         <Button x:Name="logOutButton" Content="Log out" HorizontalAlignment="Right" Height="32" Margin="0,0,10,5" VerticalAlignment="Bottom" Width="106" FontSize="14" Background="#FFEA5454" Foreground="White" FontWeight="Bold" BorderBrush="#FFF96363" Cursor="Hand"/>
-        <DataGrid x:Name="BooksDataGrid" ItemsSource="{Binding Books}"  CanUserAddRows="False" AutoGenerateColumns="False" Height="NaN" Margin="12,279,594,39">
+        <DataGrid x:Name="BooksDataGrid" SelectedItem="{Binding SelectedBook}" ItemsSource="{Binding Books}"  CanUserAddRows="False" AutoGenerateColumns="False" Height="NaN" Margin="12,279,594,39">
             <DataGrid.Columns>
                 <DataGridTextColumn Header="ISBN" Binding="{Binding ISBN}"></DataGridTextColumn>
                 <DataGridTextColumn Header="Published" Binding="{Binding Published}"></DataGridTextColumn>
@@ -45,7 +45,6 @@
                 <DataGridTextColumn Header="Status" Binding="{Binding Status}"></DataGridTextColumn>
                 <DataGridTextColumn Header="Price" Binding="{Binding Price}"></DataGridTextColumn>
                 <DataGridCheckBoxColumn Header="Is damaged" Binding="{Binding IsDamaged}"></DataGridCheckBoxColumn>
-                <DataGridTextColumn Header="Book ISBN" Binding="{Binding ISBN}"></DataGridTextColumn>
             </DataGrid.Columns>
         </DataGrid>
         <Button x:Name="addBookButton" Command="{Binding ShowAddBookDialogCommand}"  Content="Add book" HorizontalAlignment="Left" Margin="88,0,0,0" VerticalAlignment="Center" Width="82" Height="22" Background="#FF4FB53A" Foreground="White" Cursor="Hand"/>
