--- a/LibrarySystem/LibrarySystem/MainUI/SpecializedLibrarianView/TitleManaging/AddTitleDialog.xaml
+++ b/LibrarySystem/LibrarySystem/MainUI/SpecializedLibrarianView/TitleManaging/AddTitleDialog.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="LibrarySystem.MainUI.SpecializedLibrarianView.AddTitleDialog"
+﻿<Window x:Class="LibrarySystem.MainUI.SpecializedLibrarianView.TitleManaging.AddTitleDialog"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
