--- a/LibrarySystem/LibrarySystem/MainUI/SpecializedLibrarianView/SpecializedLibrarianWindow.xaml
+++ b/LibrarySystem/LibrarySystem/MainUI/SpecializedLibrarianView/SpecializedLibrarianWindow.xaml
@@ -13,19 +13,13 @@
                 <DataGridTextColumn Header="Language" Binding="{Binding Language}"></DataGridTextColumn>
                 <DataGridTextColumn Header="UDK" Binding="{Binding UDK}"></DataGridTextColumn>
                 <DataGridTextColumn Header="Genre" Binding="{Binding Genre}"></DataGridTextColumn>
-                <DataGridTemplateColumn Header="Authors">
-                    <DataGridTemplateColumn.CellTemplate>
-                        <DataTemplate>
-                            <ListBox ItemsSource="{Binding Authors}"></ListBox>
-                        </DataTemplate>
-                    </DataGridTemplateColumn.CellTemplate>
-                </DataGridTemplateColumn>
+                <DataGridTextColumn Header="Authors" Binding="{Binding Authors}"></DataGridTextColumn>
             </DataGrid.Columns>
         </DataGrid>
 
         <Label x:Name="loggedUsernameLabel" Content="USERNAME" HorizontalAlignment="Left" Margin="90,0,0,5" VerticalAlignment="Bottom" FontSize="14"/>
         <Label x:Name="loggedLabel" Content="Logged in:" HorizontalAlignment="Left" Margin="10,0,0,5" VerticalAlignment="Bottom" FontSize="14"/>
-        <Button x:Name="logOutButton" Content="Log out" HorizontalAlignment="Right" Height="32" Margin="0,0,10,5" VerticalAlignment="Bottom" Width="106" FontSize="14" Background="#FFEA5454" Foreground="White" FontWeight="Bold" BorderBrush="#FFF96363" Cursor="Hand"/>
+        <Button x:Name="logOutButton" Command="{Binding LogoutCommand}" Content="Log out" HorizontalAlignment="Right" Height="32" Margin="0,0,10,5" VerticalAlignment="Bottom" Width="106" FontSize="14" Background="#FFEA5454" Foreground="White" FontWeight="Bold" BorderBrush="#FFF96363" Cursor="Hand"/>
         <DataGrid x:Name="BooksDataGrid" ColumnWidth="*" SelectedItem="{Binding SelectedBook}" ItemsSource="{Binding Books}"  CanUserAddRows="False" AutoGenerateColumns="False" Height="NaN" Margin="12,279,594,39">
             <DataGrid.Columns>
                 <DataGridTextColumn Header="ISBN" Binding="{Binding ISBN}"></DataGridTextColumn>
