--- a/LibrarySystem/LibrarySystem/Users/GUI/Views/MembersHandlingWindow.xaml
+++ b/LibrarySystem/LibrarySystem/Users/GUI/Views/MembersHandlingWindow.xaml
@@ -7,7 +7,7 @@
         mc:Ignorable="d"
         Title="MembersHandlingWindow" Height="630" Width="1490" WindowStartupLocation="CenterScreen">
     <Grid>
-        <DataGrid x:Name="membersDataGrid" ItemsSource="{Binding Members}" ColumnWidth="*" CanUserAddRows="False" IsReadOnly="True" HorizontalAlignment="Center" VerticalAlignment="Top" Height="495" Width="1406" Margin="0,80,0,0" AutoGenerateColumns="False">
+        <DataGrid x:Name="membersDataGrid" SelectedItem="{Binding SelectedMember}" ItemsSource="{Binding Members}" ColumnWidth="*" CanUserAddRows="False" IsReadOnly="True" HorizontalAlignment="Center" VerticalAlignment="Top" Height="495" Width="1406" Margin="0,80,0,0" AutoGenerateColumns="False">
             <DataGrid.Columns>
                 <DataGridTextColumn Header="Jmbg" Binding="{Binding Jmbg}"></DataGridTextColumn>
                 <DataGridTextColumn Header="First name" Binding="{Binding FirstName}"></DataGridTextColumn>
@@ -20,6 +20,8 @@
                 <DataGridTextColumn Header="Member type" Binding="{Binding Type}"></DataGridTextColumn>
             </DataGrid.Columns>
         </DataGrid>
-        <Button x:Name="registerMember" CommandParameter="{x:Reference Name = membersHandlingWindow}" Command="{Binding ShowRegisterMemberWindowCommand}" Content="Register member" HorizontalAlignment="Left" Margin="42,18,0,0" Width="180" FontSize="18" Background="#FF4FB53A" Foreground="White" Cursor="Hand" VerticalAlignment="Top" Height="45"/>
+        <Button x:Name="registerMemberButton" CommandParameter="{x:Reference Name = membersHandlingWindow}" Command="{Binding ShowRegisterMemberWindowCommand}" Content="Register member" HorizontalAlignment="Left" Margin="42,18,0,0" Width="180" FontSize="18" Background="#FF4FB53A" Foreground="White" Cursor="Hand" VerticalAlignment="Top" Height="45"/>
+        <Button x:Name="editMemberButton" CommandParameter="{x:Reference Name = membersHandlingWindow}" Command="{Binding ShowEditMemberWindowCommand}" Content="Edit member" HorizontalAlignment="Left" Margin="236,18,0,0" VerticalAlignment="Top" Width="180" Height="45" FontSize="18" Background="#FF3671D0" Foreground="White" Cursor="Hand"/>
+        <Button x:Name="removeMemberButton" CommandParameter="{x:Reference Name = membersHandlingWindow}" Command="{Binding RemoveSelectedMemberCommand}" Content="Remove member" HorizontalAlignment="Left" Margin="431,18,0,0" VerticalAlignment="Top" Width="180" Height="45" FontSize="18" Background="#FFEA5454" Foreground="White" RenderTransformOrigin="2.185,0.629"  Cursor="Hand"/>
     </Grid>
 </Window>
