--- a/LibrarySystem/LibrarySystem/BookBorrowings/BookReturn/ReturnBookDialogs/ReturnBookDialog.xaml
+++ b/LibrarySystem/LibrarySystem/BookBorrowings/BookReturn/ReturnBookDialogs/ReturnBookDialog.xaml
@@ -13,7 +13,7 @@
         <Label Content="{Binding Copy.Id}" HorizontalAlignment="Center" Height="30" Margin="0,36,0,0" VerticalAlignment="Top" Width="164"/>
         <Label Content="Title:" HorizontalAlignment="Left" Height="35" Margin="39,90,0,0" VerticalAlignment="Top" Width="50"/>
         <Label Content="{Binding Title}" HorizontalAlignment="Center" Height="35" Margin="0,90,0,0" VerticalAlignment="Top" Width="163"/>
-        <Button Content="Confirm Return" IsEnabled="{Binding IsFeePayed}" HorizontalAlignment="Left" Height="41" Margin="200,183,0,0" VerticalAlignment="Top" Width="150"/>
+        <Button Content="Confirm Return" IsEnabled="{Binding IsFeePayed}" Command="{Binding ReturnBookCommand}" HorizontalAlignment="Left" Height="41" Margin="200,183,0,0" VerticalAlignment="Top" Width="150"/>
         <Label Content="{Binding Fee}" HorizontalAlignment="Left" Height="36" Margin="39,130,0,0" VerticalAlignment="Top" Width="156" Foreground="#FFEE1414"/>
         <Button x:Name="PayFeeButton" Visibility="{Binding Path=ShowFeeButton, Converter={StaticResource Converter}}" Command="{Binding PayFeeCommand}" Content="Pay fee" HorizontalAlignment="Left" Height="41" Margin="39,183,0,0" VerticalAlignment="Top" Width="141" Background="#FFF41E1E" BorderBrush="#FF200404" Foreground="#FFFFFDFD"/>
 
