feat: added logged in label

--- a/LibrarySystem/LibrarySystem/MainUI/SpecializedLibrarianView/SpecializedLibrarianWindow.xaml
+++ b/LibrarySystem/LibrarySystem/MainUI/SpecializedLibrarianView/SpecializedLibrarianWindow.xaml
@@ -17,7 +17,7 @@
             </DataGrid.Columns>
         </DataGrid>
 
-        <Label x:Name="loggedUsernameLabel" Content="USERNAME" HorizontalAlignment="Left" Margin="90,0,0,5" VerticalAlignment="Bottom" FontSize="14"/>
+        <Label x:Name="loggedUsernameLabel" Content="{Binding LoggedUsername}" HorizontalAlignment="Left" Margin="90,0,0,5" VerticalAlignment="Bottom" FontSize="14"/>
         <Label x:Name="loggedLabel" Content="Logged in:" HorizontalAlignment="Left" Margin="10,0,0,5" VerticalAlignment="Bottom" FontSize="14"/>
         <Button x:Name="logOutButton" Command="{Binding LogoutCommand}" Content="Log out" HorizontalAlignment="Right" Height="32" Margin="0,0,10,5" VerticalAlignment="Bottom" Width="106" FontSize="14" Background="#FFEA5454" Foreground="White" FontWeight="Bold" BorderBrush="#FFF96363" Cursor="Hand"/>
         <DataGrid x:Name="BooksDataGrid" ColumnWidth="*" SelectedItem="{Binding SelectedBook}" ItemsSource="{Binding Books}"  CanUserAddRows="False" AutoGenerateColumns="False" Height="NaN" Margin="12,279,594,39">
